# DeepFake-detection

./: .gitignore  Deeplearning_project_phase_1.ipynb  Deeplearning_project_phase_2.ipynb  main_input_video.py  main_real_time.py  main_screenCapture.py  pyproject.toml
